--- a/blink_sass/variables.sass
+++ b/blink_sass/variables.sass
@@ -5,6 +5,8 @@
 $screen-sm: 768px
 $screen-md: 992px
 $screen-lg: 1200px
+$screen-md-h: 964px
+$screen-lg-h: 965px
 
 // --------------------------------------------
 // Colors
