--- a/templates/share/site_header.html
+++ b/templates/share/site_header.html
@@ -10,7 +10,13 @@
             <div class="col-lg-12">
             <div class="nav navbar-left">
                  <ul class="">
-                     <li class="navbar-item"> <a href="{% url 'landing_page' %}"><img class="navbar-brand" src="{% static 'img/isblogo.png' %}" alt="ISB Logo"/><span class="navbar-item">ISB-CGC</span></a></li>
+                    <li class="navbar-item">
+                        {% if user.is_authenticated %}
+                             <a href="{% url 'dashboard' %}" title="Dashboard" >
+                        {%  else %}
+                            <a href="{% url 'landing_page' %}" title="Home Page" >
+                        {%  endif %}
+                        <img class="navbar-brand" src="{% static 'img/isblogo.png' %}" alt="ISB Logo"/><span class="navbar-item">ISB-CGC</span></a></li>
                      <li class="navbar-link navbar-item"><a href="{% url 'landing_page' %}">About Us</a></li>
                      <li class="navbar-link navbar-item">
                          <a href="http://isb-cancer-genomics-cloud.readthedocs.org/en/latest/" target="_blank">Documentation</a>
