- Moved views and urls into account app - Implemented unregistering of gcp and sa - added images to help users authorize isb-cgc service account

--- a/blink_sass/pages/_users.sass
+++ b/blink_sass/pages/_users.sass
@@ -99,3 +99,16 @@
 #user-gcp-list
     .table .table
         background-color: transparent
+
+#register-gcp
+    margin-bottom: 30px
+    ul
+        list-style: circle
+        padding-left: 20px
+        li
+            margin: 5px 0px
+            img
+                display: block
+
+    i.fa-check
+        color: $isb-success
