--- a/templates/GenespotRE/user_gcp_list_modals.html
+++ b/templates/GenespotRE/user_gcp_list_modals.html
@@ -10,10 +10,12 @@
                 <div class="modal-body">
                     {% csrf_token %}
                     <p>
-                        <em>Note</em>: By unregistering this Google Cloud Project, you do not remove it from view from other users who
-                        have registered this project. Nor does it revoke the ability for the ISB-CGC web application to continue
-                        to view users associated to the project. To manage who has access to your project, you must go to your
+                        <em>Note</em>: By unregistering this Google Cloud Project, you are also removing it from other users who
+                        are associated to and have registered this project. This action does not revoke the ability for the ISB-CGC
+                        web application to continue to view users associated to the project. To manage who has access to your
+                        project, you must go to your
                         <a href="https://console.cloud.google.com/home/dashboard" target="_blank">Google Cloud Console</a>.
+                        This will also revoke access for all service account associated to the project.
                     </p>
                 </div>
                 <div class="modal-footer">
