- Add overflow constraints to workbook display on the dashboard

--- a/blink_sass/pages/_dashboard.sass
+++ b/blink_sass/pages/_dashboard.sass
@@ -5,8 +5,13 @@
     float: left
     text-align: center
 
-.table-list li .list-main
+.table-list li
+  .list-main
     overflow: hidden
     text-overflow: ellipsis
     white-space: nowrap
-    padding-right: 10px
+    p
+      overflow: inherit
+      text-overflow: inherit
+  .list-info
+    padding-left: 10px
