- title text for workbook names on the dashboard

--- a/blink_sass/pages/_dashboard.sass
+++ b/blink_sass/pages/_dashboard.sass
@@ -10,7 +10,7 @@
     overflow: hidden
     text-overflow: ellipsis
     white-space: nowrap
-    p
+    p,h5
       overflow: inherit
       text-overflow: inherit
   .list-info
